--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,5 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 collections:
-  sessions:
-    output: true
-  presenters:
-    output: false
+  - sessions
+  - presenters
